--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
-<h1>
-  {{title}}
-</h1>
+<header>
+    <h1>{{title}}</h1>
+
+    <nav>
+      <ul>
+        <li>Linl 1</li>
+        <li>Linl 2</li>
+      </ul>
+    </nav>
+</header>
+
+<section id="mainSection">
+  <app-home [mainNinja]="mainNinja" (onYell)="yell($event)"></app-home>
+</section>
