--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,13 @@
 
     <nav>
       <ul>
-        <li>Linl 1</li>
-        <li>Linl 2</li>
+          <li><a routerLink="/" routerLinkActive="active">Home</a></li>
+          <li><a routerLink="/directory" >Directory</a></li>
       </ul>
     </nav>
 </header>
 
 <section id="mainSection">
-  <app-home [mainNinja]="mainNinja" (onYell)="yell($event)"></app-home>
+  <!--<app-home [mainNinja]="mainNinja" (onYell)="yell($event)"></app-home>-->
+  <router-outlet></router-outlet>
 </section>
