--- a/src/app/directory/directory.component.html
+++ b/src/app/directory/directory.component.html
@@ -1,10 +1,17 @@
 <h2>Ninja Listings</h2>
 
+<form id="filter">
+  <label>Filter by name</label>
+  <input type="text" name="ninjaName" [(ngModel)]="ninjaName"/>
+</form>
+
 <ul id="ninja-listing">
-  <li *ngFor="let ninja of ninjas">
+  <li *ngFor="let ninja of ninjas | filter:ninjaName">
     <div class="single-ninja">
       <span [ngStyle]="{background : ninja.belt}">{{ninja.belt}} belt</span>
-      <h3>{{ninja.name}}</h3>
+      <h3>{{ninja.name | filter}}</h3>
     </div>
   </li>
 </ul>
+
+<button (click)="logIt()">Log Me</button>
